tests/NormalTests/paczka1/fuzzy1/95872601.err
Error in line 1: 03BJIgC4P A96 45,6
Error in line 3: xDOO2iyUr A956 5,9
Error in line 20: LMtvVK A956 39,5
Error in line 23: 03BJIgC4P A408 55,3
Error in line 15: Kh80B A96 36,0
